# a2a-multiagent-ge-cicd

./: .env.deploy  .env.example  .gitignore  .pre-commit-config.yaml  App Design.md  Design_document.md  GEMINI.md  LICENSE  Makefile  README.md  all_agents.json  attrs.txt  deploy_adk_agent_on_agent_engine.ipynb  list_agents.py  pyproject.toml  signatures.txt  starter_pack_README.md  starter_pack_pyproject.toml  temp_logs.json  test_adk_client.py  test_agent.py  test_agent_routes.py  test_agent_routes2.py  test_agent_schemas.py  test_deploy.sh  test_executor.py  test_fastmcp_client.py  test_local_proxy.py  test_re.py  test_streamable.py  test_token.py  test_toolset.py  test_toolset2.py
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
a2a_agents/: deploy_hosting_agent.ipynb
a2a_agents/cocktail_agent/: cocktail_agent_executor.py
a2a_agents/hosting_agent/: hosting_agent_card.py
a2a_agents/register_agent_to_agentspace/: A2A+AE_GE.ipynb
a2a_agents/weather_agent/: weather_agent_executor.py
app/: __init__.py  agent.py  agent_engine_app.py
app/app_utils/: __init__.py  deploy.py  telemetry.py  typing.py
deployment/: CICD_CONFIGURATION.md  README.md  deploy_agents.py
deployment/terraform/: backend.tf  build_triggers.tf  find_duplicate_agents.sh  find_duplicate_agents_all_engines.sh  frontend.tf  gemini_enterprise.tf  github.tf  iam.tf  locals.tf  mcp_iam.tf  model_armor.tf  providers.tf  service.tf  service_accounts.tf  storage.tf  telemetry.tf  terraform.tfvars  terraform.tfvars.bak  terraform.tfvars.example  tfplan  variables.tf
docs/: cicd_strategy.md  design.md  evaluation_pipeline.md  oauth.md  software_design.md
mcp_servers/cocktail_mcp_server/: README.md
scripts/: deploy_agent.py  register_agent_to_agentspace.py  register_agent_to_gemini_enterprise.py
src/: requirements.txt
src/a2a_agents/: README.md  __init__.py  pyproject.toml  requirements.txt
src/a2a_agents/cocktail_agent/: cocktail_agent_card.py  cocktail_agent_executor.py
src/a2a_agents/common/: __init__.py  adk_base_mcp_agent_executor.py  adk_orchestrator_agent.py  adk_orchestrator_agent_executor.py  agent_configs.py  auth_utils.py  remote_connection.py
src/a2a_agents/hosting_agent/: adk_agent.py  agent_executor.py  hosting_agent_card.py
src/a2a_agents/register_agent_to_agentspace/: register_agent_to_agentspace.ipynb
src/a2a_agents/register_agent_to_gemini_enterprise/: .env.example
src/a2a_agents/weather_agent/: weather_agent_card.py  weather_agent_executor.py
src/frontend/: README.md  main.py  pyproject.toml
tests/: MIGRATION_SUMMARY.md  README.md  conftest.py  run_all_tests.py  test_config.py  test_utils.py
tests/eval/: eval_config.json  evaluator.py  run_evaluation.py  test_agent_evaluation.py
tests/integration/: test_agent.py  test_agent_engine_app.py  test_cocktail_agent_remote.py  test_cocktail_mcp_server.py  (+11 more)
(+53 files in other folders)
