[project]
name = "a2a-multiagent-ge-cicd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-agents",
    "a2a-sdk>=0.3.5",
    "google-adk>=1.25.0",
    "google-cloud-aiplatform>=1.113.0",
    "google-genai>=1.63.0",
    "fastmcp",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.workspace]
members = [
    "src/a2a_agents",
]

[tool.uv.sources]
a2a-agents = { workspace = true }
