[project]
name = "a2a-multiagent-ge-cicd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-agents",
    "a2a-sdk>=0.3.5",
    "google-adk>=1.25.0",
    "google-cloud-aiplatform>=1.113.0",
    "google-genai>=1.63.0",
    "fastmcp",
    "python-terraform>=0.10.1",
    "aiobreaker>=1.2.0",
    "pre-commit>=4.5.1",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.workspace]
members = [
    "src/a2a_agents",
]

[tool.uv.sources]
a2a-agents = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.0",
    "codespell>=2.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
