[project]
name = "a2a-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "a2a-sdk>=0.3.5",
  "click>=8.2.1",
  "google-adk>=1.14.1",
  "google-auth-oauthlib>=1.2.2",
  "google-auth>=2.40.3",
  "google-cloud-aiplatform[agent-engines]>=1.113.0",
  "google-genai>=1.36.0",
  "gradio>=5.46.1",
  "ipykernel>=6.30.1",
  "nbqa>=1.9.1",
]

[dependency-groups]
dev = [
  "black>=25.9.0",
  "flake8>=7.3.0",
  "ruff>=0.9.0",
  "codespell>=2.4.0",
]

[project.optional-dependencies]
vertex-deploy = [
    "google-cloud-aiplatform[agent_engines,adk]>=1.112.0",
    "a2a-sdk>=0.3.4",
    "pydantic>=2.11.9",
    "cloudpickle>=3.1.1",
    "google-auth-oauthlib>=1.2.2",
    "google-auth>=2.40.3",
    "google-genai>=1.36.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["a2a_agents", "a2a_agents.cocktail_agent", "a2a_agents.weather_agent", "a2a_agents.hosting_agent", "a2a_agents.common"]

[tool.setuptools.package-dir]
a2a_agents = "."
